--- a/sass/ts.scss
+++ b/sass/ts.scss
@@ -391,7 +391,6 @@ ul.client-list {
 
 
 .blog.most-recent {
-	padding: 0em 0;
 	text-align: center;
 	li {
 	  list-style: none;
